--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="style-social.css">
 </head>
 <body>
-  
+
 <div class="body-position">
   <main class="social-profile-container">
     <header>
@@ -32,7 +32,7 @@
        
     <section>
       <div class="work-title-container">
-        <p>"UX Design Engineers"</p>
+        <p>"UX Design Engineer"</p>
       </div>
     </section>
 
